--- a/WpfApp1/Register.xaml
+++ b/WpfApp1/Register.xaml
@@ -30,7 +30,7 @@
                  0,3,
                  490,3
                  490,0"/>
-                <Button Style="{StaticResource MaterialDesignFlatButton}" Content="Ligin" Margin="0 10 0 0" Width="90" Cursor="Hand"/>
+                <Button Style="{StaticResource MaterialDesignFlatButton}" Content="Login" Margin="0 10 0 0" Width="90" Cursor="Hand"/>
             </StackPanel>
         </Border>
     </Grid>
