--- a/WpfApp1/Register.xaml
+++ b/WpfApp1/Register.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:WpfApp1"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Register" Height="450" Width="800">
+        Title="Register" Height="500" Width="800">
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="C:\Users\user\Source\Repos\Lab1_Prson-machine\WpfApp1\milky-way-with-a-large-number-of-stars-in-the-night-dark-blue-sky_118086-3774.jpg"></ImageBrush>
+            <ImageBrush ImageSource="D:\University\Person-computer\Lab1\WpfApp1\milky-way-with-a-large-number-of-stars-in-the-night-dark-blue-sky_118086-3774.jpg"></ImageBrush>
         </Grid.Background>
         <Border MinWidth="400" Margin="15" Background="white" Opacity="0.7" VerticalAlignment="Center" Padding="30" MaxWidth="550" CornerRadius="20">
             <Border.Effect>
@@ -30,7 +30,7 @@
                  0,3,
                  490,3
                  490,0"/>
-                <Button Style="{StaticResource MaterialDesignFlatButton}" Content="Login" Margin="0 10 0 0" Width="90" Cursor="Hand"/>
+                <Button Style="{StaticResource MaterialDesignFlatButton}" Content="Login" Margin="0 10 0 0" Width="90" Cursor="Hand" Click="Button_Click"/>
             </StackPanel>
         </Border>
     </Grid>
