--- a/WpfApp1/Test2.xaml
+++ b/WpfApp1/Test2.xaml
@@ -23,7 +23,7 @@
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                        <Button Background="Transparent" Height="75" BorderBrush="Transparent" BorderThickness="0">
+                        <Button Background="Transparent" Height="75" BorderBrush="Transparent" BorderThickness="0" Click="Button_Click">
                             <Image Source="D:\University\Person-computer\Lab1\WpfApp1\pngwing.com (2).png" RenderTransformOrigin="0.5,0.5" Height="63" Width="59">
                                 <Image.RenderTransform>
                                     <TransformGroup>
@@ -48,6 +48,7 @@
                          70,15
                          85,40
                          70,65" Height="75" VerticalAlignment="Top"/>
+                            <Button Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Width="70" Height="50" HorizontalAlignment="Left" Click="Button_Click_2"/>
                             <TextBlock Text="Тестирование" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 0 7 0" Foreground="DarkBlue" FontSize="11" FontWeight="Bold"></TextBlock>
                         </Grid>
 
@@ -77,7 +78,7 @@
                                 </Image.RenderTransform>
                             </Image>
                         </Button>
-                        <Button Background="Transparent" Height="75"  BorderBrush="Transparent" BorderThickness="0">
+                        <Button Background="Transparent" Height="75"  BorderBrush="Transparent" BorderThickness="0" Click="Button_Click_1">
                             <Image Source="D:\University\Person-computer\Lab1\WpfApp1\icons8-дверь-открыта-40.png" RenderTransformOrigin="0.5,0.5" Height="63" Width="59">
 
                                 <Image.RenderTransform>
